teste para deploy

--- a/pagina-disciplinas-sem-login.html
+++ b/pagina-disciplinas-sem-login.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<HTMl>   
+<HTMl>
 <head>
-    <meta charset="utf-8">
-    <title>UCDb: classificações e reviews de cursos da UFCG</title>
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="utf-8">
+	<title>UCDb: classificações e reviews de cursos da UFCG</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-       <div style=" font-size: 100px; margin: 30px"><strong>  LISTA DE DISCIPLINAS</strong> </div>
-       <div style=" font-size: 100px; margin: 60px"><strong>  SEM ESTAR LOGADO</strong> </div>
-       <div style=" font-size: 100px; margin: 60px; color: RED"><strong>  NOT LOGGED</strong> </div>
-       <div id="disciplinas"></div>
-      
-      <script type="module" src="disciplinas_inicial.js"></script>
-      
+	<div style=" font-size: 20px; margin: 2px"><strong>LISTA DE DISCIPLINAS</strong> </div>
+	<div style=" font-size: 20px; margin: 2px; color: RED"><strong>NOT LOGGED IN</strong> </div>
+	<!--<div id="disciplinas"></div>-->
+	
+	<table id="disciplinas"></table>
+	<script type="module" src="js/disciplinas_inicial.js"></script>	
 </body>
-
 </HTMl>
