atualiza codigo cadastro

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>UCDb: classificações e reviews de cursos da UFCG</title>
 	<link rel="stylesheet" href="css/style.css">
+	<script type="module" src="js/pag_index.js"></script>
 </head>
 <body>
 	<img class="computacao-logo" src="img/logo-topo2.png" alt="No image">
