--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	<div class="login">
     <h1>Login</h1>
     <form method="post" action="">
-		  <p><input type="text" name="login" value="" placeholder="Email"></p>
-      <p><input type="password" name="password" value="" placeholder="Senha"></p>
-      <p class="submit"><input type="submit" name="commit" value="Entrar"></p>
+		  <p><input type="text" id="email" value="" placeholder="E-mail"></p>
+      <p><input type="password" id="password" value="" placeholder="Senha"></p>
+      <p class="submit"><input type="submit" id="commit" value="Entrar"></p>
     </form>
   </div>
   <a id="botao-disciplinas" href="pagina-disciplinas-sem-login.html" target="_blank" rel="noopener noreferrer">Disciplinas disponíveis</a>
