--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<div class="login">
     <h1>Login</h1>
-    <form method="post" action="javascript:void(0);">
+    <form action="javascript:void(0);">
 		  <p><input type="text" id="email" value="" placeholder="E-mail"></p>
       <p><input type="password" id="password" value="" placeholder="Senha"></p>
       <p class="submit"><input type="submit" id="commit" value="Entrar"></p>
