organiza e atualiza código

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <p class="submit"><input type="submit" id="commit" value="Entrar"></p>
         </form>
     </div>
-    <a id="botao-disciplinas" href="pagina-disciplinas-sem-login.html" target="_blank" rel="noopener noreferrer">Disciplinas disponíveis</a>
+    <a id="botao-disciplinas" href="disciplinas.html" target="_blank" rel="noopener noreferrer">Disciplinas</a>
     <div id="cadastrar">
-        <p>Ainda não é cadastrado? <a href="pagina-cadastro.html">Cadastrar</a></p>
+        <p>Ainda não é cadastrado? <a href="cadastro.html">Cadastrar</a></p>
     </div>
 </body>
 </HTMl>
