--- a/disciplinas.html
+++ b/disciplinas.html
@@ -8,10 +8,8 @@
 <body>
 
 	<div style=" font-size: 20px; margin: 2px"><strong>LISTA DE DISCIPLINAS</strong> </div>
-	<div style=" font-size: 20px; margin: 2px; color: RED"><strong>NOT LOGGED IN</strong> </div>
-	<!--<div id="disciplinas"></div>-->
-	
-	<table id="disciplinas"></table>
-	<script type="module" src="js/disciplinas_inicial.js"></script>	
+    
+    <table id="disciplinas"></table>
+	<script type="module" src="js/pag_disciplinas.js"></script>	
 </body>
 </HTMl>
