--- a/disciplinas.html
+++ b/disciplinas.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<div style=" font-size: 20px; margin: 2px"><strong>LISTA DE DISCIPLINAS</strong> </div>
+	<div style=" font-size: 30px; margin: 10px; margin-top: 30px"><strong>LISTA DE DISCIPLINAS</strong> </div>
     
     <table id="disciplinas"></table>
 	<script type="module" src="js/pag_disciplinas.js"></script>	
