--- a/disciplinas.html
+++ b/disciplinas.html
@@ -10,7 +10,7 @@
 
 	<div style=" font-size: 30px; margin: 10px; margin-top: 30px"><strong>LISTA DE DISCIPLINAS</strong> </div>
     
-    <table id="disciplinas"></table>
+    <table class="disciplinas"></table>
 		
 </body>
 </HTMl>
