--- a/disciplinas.html
+++ b/disciplinas.html
@@ -4,13 +4,13 @@
 	<meta charset="utf-8">
 	<title>UCDb: classificações e reviews de cursos da UFCG</title>
 	<link rel="stylesheet" href="css/style.css">
-	<script type="module" src="js/pag_disciplinas.js"></script>
+	
 </head>
 <body>
 
 	<div style=" font-size: 30px; margin: 10px; margin-top: 30px"><strong>LISTA DE DISCIPLINAS</strong> </div>
     
-    <table class="disciplinas"></table>
+    <table id="disciplinas"></table>
 		
 </body>
 </HTMl>
