--- a/disciplinas.html
+++ b/disciplinas.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>UCDb: classificações e reviews de cursos da UFCG</title>
 	<link rel="stylesheet" href="css/style.css">
+	<script type="module" src="js/pag_disciplinas.js"></script>  
 	
 </head>
 <body>
