css da pagina de busca e busca de disciplinas em processo

--- a/disciplinas.html
+++ b/disciplinas.html
@@ -3,15 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<title>UCDb: classificações e reviews de cursos da UFCG</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script type="module" src="js/pag_disciplinas.js"></script>  
+    <link rel="stylesheet" href="css/table.css">
+	<script type="module" src="js/pag_disciplinas.js"></script> 
 	
 </head>
-<body>
+<header>
+	<div id="divBusca">
+			<input type="text" id="txtBusca" placeholder="Disciplina..."/>
+	</div>
+</header>  
 
-	<div style=" font-size: 30px; margin: 10px; margin-top: 30px"><strong>LISTA DE DISCIPLINAS</strong> </div>
-    
-        <table id="disciplinas"></table>
-		
+
+<div class="caption">LISTA DE DISCIPLINAS</div>	
+<table id="disciplinas"></table>
+
+</body>
 </body>
 </HTMl>
