atualiza estilos, organiza codigo, adiciona nota

--- a/cadastro.html
+++ b/cadastro.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>UCDb: classificações e reviews de cursos da UFCG</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/pag_cadastro.js"></script>
+    <script type="module" src="js/cadastro.js"></script>
 </head>
 <body>
     <img class="computacao-logo" src="img/logo-topo2.png" alt="No image">
     
-    <div class="login">
+    <div class="form-comum">
         <h1>Cadastro</h1>
         <form action="javascript:void(0);">
             <p><input type="text" id="nome" value="" placeholder="Nome"></p>
