--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title>UCDb: classificações e reviews de cursos da UFCG</title>
     <link rel="stylesheet" href="css/style.css">
-    <script type="module" src="js/pag_index.js"></script>
+    <link rel="stylesheet" href="css/index.css">
+    <script type="module" src="js/index.js"></script>
 </head>
 <body>
     <img class="computacao-logo" src="img/logo-topo2.png" alt="No image">
     
-    <div class="login">
+    <div class="form-comum">
         <h1>Login</h1>
         <form action="javascript:void(0);">
             <p><input type="text" id="email" value="" placeholder="E-mail"></p>
@@ -17,7 +18,7 @@
             <p class="submit"><input type="submit" id="commit" value="Entrar"></p>
         </form>
     </div>
-    <a id="botao-disciplinas" href="disciplinas.html" target="_blank" rel="noopener noreferrer">Disciplinas</a>
+    <a class="botao-comum" id="botao-disciplinas" href="disciplinas.html">Disciplinas</a>
     <div id="cadastrar">
         <p>Ainda não é cadastrado? <a href="cadastro.html">Cadastrar</a></p>
     </div>
