--- a/cadastro.html
+++ b/cadastro.html
@@ -20,6 +20,14 @@
             
             <p class="submit"><input id="createUserButton" type="submit" name="cadastrar" value="Cadastrar"></p>
         </form>
-	</div>
+    </div>
+    
+    <div id="footer" style="font-size: 12px;">
+        <p>
+            UCDb: classificações e reviews de cursos da UFCG<br>
+            Projeto de Software 2019.1 - UFCG<br>
+            Alunos: Igor Santa Ritta Seabra e Victor Paz de Farias Braga
+        </p>
+    </div>
 </body>
 </HTMl>
