--- a/disciplinas.html
+++ b/disciplinas.html
@@ -24,5 +24,13 @@
         <h1>Lista de Disciplinas</h1>	
         <table id="disciplinas"></table>
     </div>
+    
+    <div id="footer" style="font-size: 12px;">
+        <p>
+            UCDb: classificações e reviews de cursos da UFCG<br>
+            Projeto de Software 2019.1 - UFCG<br>
+            Alunos: Igor Santa Ritta Seabra e Victor Paz de Farias Braga
+        </p>
+    </div>
     </body>
 </html>
