--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
         </form>
     </div>
     <a class="botao-comum" id="botao-disciplinas" href="disciplinas.html">Disciplinas</a>
-    <div id="cadastrar">
+    <div id="footer">
         <p>Ainda não é cadastrado? <a href="cadastro.html">Cadastrar</a></p>
+    </div>
+
+    <div id="footer" style="font-size: 12px;">
+        <p>
+            UCDb: classificações e reviews de cursos da UFCG<br>
+            Projeto de Software 2019.1 - UFCG<br>
+            Alunos: Igor Santa Ritta Seabra e Victor Paz de Farias Braga
+        </p>
     </div>
 </body>
 </HTMl>
