--- a/perfil.html
+++ b/perfil.html
@@ -22,7 +22,7 @@
     <div class="cartao-disciplina">
         <form action="javascript:void(0);">
         <p>Minha nota:</p>
-        <input type="number" id="minha-nota" value="" placeholder="0">
+        <input type="number" min=0 max= 10 id="minha-nota" value="" placeholder="0">
         <p class="submit"><input type="submit" id="enviar-nota" value="Enviar"></p>
         </form>
     </div>
