adiciona header e modifica css

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/index.css">
     <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/header.js"></script>
 </head>
 <body>
-    <img class="computacao-logo" src="img/logo-topo2.png" alt="No image">
+    <div class="username-header" id="username-header"></div>
+    <a href="index.html"><img class="computacao-logo" src="img/logo-topo2.png" alt="Logo computação ufcg"></a>
     
     <div class="form-comum">
         <h1>Login</h1>
