--- a/perfil.html
+++ b/perfil.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/perfil.css">
     <script type="module" src="js/perfil.js"></script>
+    <script type="module" src="js/header.js"></script>
 </head>
 <body>
-    
-    <img class="computacao-logo" src="img/logo-topo2.png" alt="No image">
+    <div class="username-header" id="username-header"></div>
+    <a href="index.html"><img class="computacao-logo" src="img/logo-topo2.png" alt="Logo computação ufcg"></a>
     
     <div class="cartao-disciplina">
         <h1 id="nome-disciplina"></h1>
