--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
     <script type="module" src="js/cadastro.js"></script>
 </head>
 <body>
-    <img class="computacao-logo" src="img/logo-topo2.png" alt="No image">
+    <a href="index.html"><img class="computacao-logo" src="img/logo-topo2.png" alt="Logo computação ufcg"></a>
     
     <div class="form-comum">
         <h1>Cadastro</h1>
